#
# @Author: xixi_
# @Date: 2026-02-12 00:07:56
# @LastEditors: xixi_
# @LastEditTime: 2026-07-08 03:15:26
# @FilePath: /MilkshakeKit/Milkshake/CMakeLists.txt
# Copyright (c) 2017-2026 by xixi_ , All Rights Reserved.
#

cmake_minimum_required(VERSION 3.19)
project(MilkshakeKit VERSION 0.0.1 DESCRIPTION "奶昔Kit" LANGUAGES C)

add_subdirectory(MilkshakeSTL)
